--- a/CodeTest/translateBMPtoCustom/source/translateBMPtoCustom/translateBMPtoCustom.csproj
+++ b/CodeTest/translateBMPtoCustom/source/translateBMPtoCustom/translateBMPtoCustom.csproj
@@ -33,8 +33,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="imageProcessing">
+      <HintPath>..\..\data\imageProcessing.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
